# pdf2md

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark.py  eval_accuracy.py  eval_equations.py  qa.py
src/docsmcp/: chunk.py  citation.py  image.py  metadata.py  pipeline.py  server.py  triage.py
src/docsmcp/embed/: embedder.py  reranker.py
src/docsmcp/engines/: docling.py  marker.py
src/docsmcp/index/: fts.py  search.py
src/docsmcp/postprocess/: crossref.py  dedup.py  equations.py  figures.py  inference.py  normalize.py  outline.py  roman.py  table_cells.py  tables.py  xref.py
src/docsmcp/store/: cache.py  schema.py
src/docsmcp/verify/: disagree.py  vlm.py
src/pdf2md/: bookmarks.py  cache.py  cli.py  confidence.py  config.py  coverage.py  describe.py  emit.py  enrich.py  legibility.py  logging.py  metadata.py  models.py  normalize.py  outline.py  pipeline.py  preformat.py  profile.py  render.py  schema.py  scripts.py  structure.py  tables.py  transcribe.py
src/pdf2md/engines/: __init__.py  base.py  docling.py
tests/: accuracy_labels.json  conftest.py  equation_labels.json  qa_baseline.json  test_describe.py  test_docling_adapter.py  test_emit.py  test_enrich.py  test_eval_accuracy.py  test_integration.py  test_legibility.py  test_outline.py  test_profile.py  test_qa.py  test_scripts.py  test_structure.py  test_transcribe.py  test_units.py
tests/__snapshots__/: test_emit.ambr
