[project]
name = "pdf2md"
version = "0.1.0"
description = "Lossless PDF to markdown converter: logical-section files, cropped figures, per-block provenance"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.102.1",
    "pypdfium2>=4.30",
    "typer>=0.15",
    "pyyaml>=6.0",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "syrupy>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: runs real Docling end-to-end (slow, opt-in)"]
