[project]
name = "pdf2md"
version = "0.1.0"
description = "Lossless PDF to markdown converter: logical-section files, cropped figures, per-block provenance"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.90",
    # Pin Docling's OCR engine below 3.9: rapidocr 3.9.0 defaults its detection model
    # to PP-OCRv6, which its torch backend rejects ("Unsupported configuration:
    # torch.PP-OCRv6.det.small"), failing every conversion at OCR init even for
    # born-digital PDFs. 3.8.x (PP-OCRv4 default) works. Lift when 3.9.x fixes it.
    "rapidocr<3.9",
    "pypdfium2>=4.30",
    "typer>=0.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Local math-OCR for the --transcribe multi-pass (heavy: torch + GB models).
# surya-ocr 0.17 uses the pre-5 transformers config API (SuryaDecoderConfig
# .pad_token_id), but only requires `transformers>=4.56`, so cap it ourselves —
# transformers 5.x breaks it at model load.
transcribe = ["surya-ocr>=0.6", "transformers<6"]
# Vision-model crop descriptions for --describe, over any OpenAI-compatible endpoint
# (the client is light; the model runs on the configured server, local or remote).
describe = ["openai>=1.0"]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "syrupy>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: runs real Docling end-to-end (slow, opt-in)"]
