[project]
name = "pdf2md"
version = "0.1.0"
description = "Lossless PDF to markdown converter: logical-section files, cropped figures, per-block provenance"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.90",
    # Docling drives OCR through rapidocr, whose default backend is onnxruntime — but
    # without onnxruntime installed it silently falls back to a torch backend that fails
    # at OCR init two different ways across versions ("Unsupported configuration:
    # torch.PP-OCRv6.det.small" on rapidocr 3.9; "storage has wrong byte size" loading a
    # .pth on torch 2.12). onnxruntime is the stable, light backend and makes OCR
    # independent of the torch version Docling happens to pull.
    "onnxruntime>=1.17",
    # Belt-and-suspenders with the onnx backend: 3.9.0 changed the default detection model
    # to PP-OCRv6; stay on 3.8.x (PP-OCRv4) until 3.9.x is verified against onnxruntime.
    "rapidocr<3.9",
    # Target the pypdfium2 4.x API. 5.x rewrote the TOC (bookmark.get_dest().get_index()
    # instead of .page_index, and no longer yields the level the heading outline needs),
    # which silently collapses chapter splitting to one file. render/scripts use 4.x glyph
    # APIs too; migrating to 5.x is a deliberate change, not a transitive surprise.
    "pypdfium2>=4.30,<5",
    "typer>=0.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Local math-OCR for the --transcribe multi-pass (heavy: torch + GB models).
# surya-ocr 0.17 uses the pre-5 transformers config API (SuryaDecoderConfig
# .pad_token_id), but only requires `transformers>=4.56`, so cap it ourselves —
# transformers 5.x breaks it at model load.
transcribe = ["surya-ocr>=0.6", "transformers<5"]
# Vision-model crop descriptions for --describe, over any OpenAI-compatible endpoint
# (the client is light; the model runs on the configured server, local or remote).
describe = ["openai>=1.0"]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "syrupy>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: runs real Docling end-to-end (slow, opt-in)"]
